[project]
name = "permit-save-editor"
version = "0.1.0"
description = "Save editor for Potion Permit (Python port of the WPF original)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mihir Rabade" }]
keywords = ["potion-permit", "save-editor", "game-tools", "qt", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6,<7"]

[project.scripts]
ppse = "permit_save_editor.cli:app"

[project.urls]
Homepage = "https://github.com/mihirr/PermitSaveEditor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/permit_save_editor"]

[tool.hatch.build.targets.sdist]
include = [
    "src/permit_save_editor",
    "tests",
    "README.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
markers = [
    "gui: tests that require PySide6 and a Qt platform (may be skipped if absent)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",  # line length is handled by the formatter
    "B008",  # FastAPI-style default-in-call is intentional in typer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"src/permit_save_editor/ui/*" = ["N802"]  # Qt naming convention

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
